--- a/index.html
+++ b/index.html
@@ -290,31 +290,32 @@
                                 <div class="row d-md-flex mt-4 text-center">
                                     <div class="col-sm-4 mt-2 wow fadeInLeft">
                                         <div class="card border-none">
-                                            <div class="card-body">
-                                                <img src="img/team-1.jpeg" alt="Jaahf" class="img-team img-fluid rounded-circle"/>
-                                                <h5 class="card-title pt-4">Jibrin Jaafaru</h5>
-                                                <p class="card-text text-muted">Founder</p>                                                <ul class="list-inline mt-3">
-                                                    <li class="list-inline-item"><a href="linkedin,.com/in/jbrnjfr"><i class="ion-social-linkedin"></i></a></li>
-                                                    <li class="list-inline-item"><a href="twitter.com/jbrnjfr"><i class="ion-social-twitter"></i></a></li>
+                                          <div class="card-body">
+                                                <img src="img/team-2.jpg" alt="tawe" class="img-team img-fluid rounded-circle"/>
+                                                <h5 class="card-title pt-4">Nentawe Gurumdimma</h5>
+                                                <p class="card-text text-muted">Founder & CEO</p>                                                <ul class="list-inline mt-3">
+                                                    <li class="list-inline-item"><a href="linkedin.com/in/nentawe-gurumdimma-91390b5"><i class="ion-social-linkedin"></i></a></li>
+                                                    <li class="list-inline-item"><a href="twitter.com/ntawe"><i class="ion-social-twitter"></i></a></li>
                                                 </ul>
-                                            </div>
+                                            </div> 
                                         </div>
                                     </div>
                                     <div class="col-sm-4 mt-2 wow fadeIn">
                                         <div class="card border-none">
-                                            <div class="card-body">
-                                                <img src="img/team-2.jpg" alt="tawe" class="img-team img-fluid rounded-circle"/>
-                                                <h5 class="card-title pt-4">Nentawe Gurumdimma</h5>
-                                                <p class="card-text text-muted">CEO</p>                                                <ul class="list-inline mt-3">
-                                                    <li class="list-inline-item"><a href="linkedin.com/in/nentawe-gurumdimma-91390b5"><i class="ion-social-linkedin"></i></a></li>
-                                                    <li class="list-inline-item"><a href="twitter.com/ntawe"><i class="ion-social-twitter"></i></a></li>
+                                             <div class="card-body">
+                                                <img src="img/team-1.jpeg" alt="Jaahf" class="img-team img-fluid rounded-circle"/>
+                                                <h5 class="card-title pt-4">Jibrin Jaafaru</h5>
+                                                <p class="card-text text-muted">Lead Developer</p>                                                <ul class="list-inline mt-3">
+                                                    <li class="list-inline-item"><a href="linkedin,.com/in/jbrnjfr"><i class="ion-social-linkedin"></i></a></li>
+                                                    <li class="list-inline-item"><a href="twitter.com/jbrnjfr"><i class="ion-social-twitter"></i></a></li>
                                                 </ul>
                                             </div>
+                                            
                                         </div>
                                     </div>
                                     <div class="col-sm-4 mt-2 wow fadeInRight">
                                         <div class="card border-none">
-                                            <div class="card-body">
+<!--                                             <div class="card-body">
                                                 <img src="img/team-3.jpg" alt="nyam" class="img-team img-fluid rounded-circle"/>
                                                 <h5 class="card-title pt-4">Nyam Chuwang</h5>
                                                 <p class="card-text text-muted">COO</p>                                            
@@ -322,7 +323,7 @@
                                                     <li class="list-inline-item"><a href="https://x.com/nyamchuwang"><i class="ion-social-linkedin"></i></a></li>
                                                     <li class="list-inline-item"><a href="https://www.linkedin.com/in/nyam-chuwang-003a8771/"><i class="ion-social-twitter"></i></a></li>
                                                 </ul>
-                                            </div>
+                                            </div> -->
                                         </div>
                                     </div>
                                 </div>
