--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                                              <div class="card-body">
                                                 <img src="img/team-1.jpeg" alt="Jaahf" class="img-team img-fluid rounded-circle"/>
                                                 <h5 class="card-title pt-4">Jibrin Jaafaru</h5>
-                                                <p class="card-text text-muted">Lead Developer</p>                                                <ul class="list-inline mt-3">
+                                                <p class="card-text text-muted">Lead, Developer</p>                                                <ul class="list-inline mt-3">
                                                     <li class="list-inline-item"><a href="linkedin,.com/in/jbrnjfr"><i class="ion-social-linkedin"></i></a></li>
                                                     <li class="list-inline-item"><a href="twitter.com/jbrnjfr"><i class="ion-social-twitter"></i></a></li>
                                                 </ul>
